# simply-sci

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: router.py
app/api/health/: __init__.py  health.py
app/api/health/v1/: health.py
app/api/summary/v1/: summary.py
app/core/: config.py  context.py  exception.py  lifespan.py  logging.py  logging_filters.py  security.py
app/filters/: logging_filters.py
app/gateways/: openai_gateway.py
app/middlewares/: correlation.py
app/schemas/: summary.py
app/services/: summary_service.py
docs/: app_loggging.md  example.md
migrations/: readme.md
