[project]
name = "simply-sci"
version = "0.1.0"
description = "service which summaries research paper in simple terms"
authors = [
    {name = "bhagvat-sntps",email = "bhagvat.lande@springernature.com"}
]
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "fastapi (>=0.127.1,<0.128.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]


[tool.poetry]
packages = [{include = "app"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
dev = "app.main:dev"
prod = "app.main:prod"